# minimal-harness

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  memory_dump.json  pyproject.toml
demo/: cli.py
docs/: code-audit-apr-2026.md  design-pattern-audit.md  event-mechanism.md  exteral-scripts-loading.md  external-scripts-loading.md  responsive-markdown-rendering.md  stop-feature.md  tui-app-refactor-plan.md  tui-audit.md  tui-bug.md  user_tool_writing.md  vision.md
example/: cli.py
examples/: test_user_tools.py  user_tool_example.py
examples/cli/: chat_tui.py
examples/client_events_demo/: demo.py
examples/dev-with-mh/: example_use_tui.py
examples/dev-with-mh/tools/: echo_tool.py
examples/relation_digging/: main.py
examples/relation_digging/files/: .gitignore
src/minimal_harness/: __init__.py  agent.py  agent_litellm.py  llm.py  memory.py  openai_llm.py  settings.py  tool_executor.py  types.py
src/minimal_harness/agent/: __init__.py  litellm.py  openai.py  protocol.py  registry.py  runtime.py  session.py  simple.py
src/minimal_harness/client/: __init__.py  client.py  events.py
src/minimal_harness/client/built_in/: __init__.py  app.py  app.tcss  buffer.py  chat_widgets.py  config.py  constants.py  context.py  coordinator.py  display.py  export_presenter.py  markdown_styles.py  memory.py  modals.py  presenter.py  renderer.py  session.py  session_controller.py  session_manager.py  slash_handler.py  tui.py  widgets.py
src/minimal_harness/examples/cli/: __init__.py  chat_tui.py  cli.py  tools.py  tui.py  widgets.py
src/minimal_harness/examples/simple_cli/: __init__.py  cli.py
src/minimal_harness/llm/: __init__.py  anthropic.py  executor.py  litellm.py  llm.py  openai.py
src/minimal_harness/mhc/: __init__.py
src/minimal_harness/mhc/simple_cli/: __init__.py  cli.py  stream_handler.py  terminal.py
src/minimal_harness/tool/: __init__.py  base.py  bash.py  external_loader.py  glob.py  read_file.py  registration.py  registry.py  wrapper.py
test/: test_anthropic_provider.py  test_basic.py  test_client.py  test_external_loader.py  test_litellm.py  test_openai_provider.py  test_scene.py
test/agent/: test_runtime.py
test/tui/: test_buffer.py  test_chat_widgets.py  test_config.py  test_context.py  test_display.py  test_export_presenter.py  test_markdown_styles.py  test_memory.py  test_renderer.py  test_session_manager.py  test_slash_handler.py  test_widgets.py
(+22 files in other folders)
