[project]
name = "minimal-harness"
version = "0.1.4"
description = "An exploration of making an agent sdk as lean as possible while being effective."
readme = "README.md"
authors = [
    { name = "J0ey1iu", email = "joeyliu086@foxmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai",
    "textual",
]

[project.optional-dependencies]
litellm = ["litellm"]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff"
]

[project.scripts]
mh = "minimal_harness.examples.cli.cli:main"

[project.urls]
source = "https://github.com/J0ey1iu/minimal-harness"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
